Add results for October 2024

--- a/src/insights/index.njk
+++ b/src/insights/index.njk
@@ -60,7 +60,7 @@ Note that we intentionally do not include interpretations of the data here, as t
 
     <p>
       The following charts show the usage of different Browsers / User Agents for Desktop and Mobile devices (entries with &lt; 1% usage share have been filtered out). 
-      The data shown is from September 3rd 2024. 
+      The data shown is from October 1st 2024. 
     </p> 
 
     <div class="columns box">
@@ -193,7 +193,7 @@ Note that we intentionally do not include interpretations of the data here, as t
     </p>
 
     <p>
-      The data shown is from September 3rd 2024.
+      The data shown is from October 1st 2024.
     </p>
 
     <h3 id="navigationtype-aspect">Navigation Types</h3>
@@ -302,8 +302,8 @@ Note that we intentionally do not include interpretations of the data here, as t
         return dataPoints[ dataPoints.length - 1].date;
       }
       else {
-        console.error("findLastDate: no 'date' property found on dataPoints, defaulting to 2024_09_03!", dataPoints);
-        return "2024_09_03";
+        console.error("findLastDate: no 'date' property found on dataPoints, defaulting to 2024_10_01!", dataPoints);
+        return "2024_10_01";
       }
     }
 
